# udemy-django

./: .envrc  .gitignore  pyproject.toml  requirements.txt
book_store/book_outlet/: admin.py  models.py  urls.py  views.py
book_store/book_outlet/migrations/: 0001_initial.py  0002_book_author_book_is_bestseller_alter_book_rating.py  0003_book_slug.py  0004_author_alter_book_author.py  0005_alter_book_author.py  0006_address_author_address.py  0007_country_book_published_countries.py  0008_alter_book_published_countries.py  0009_alter_book_published_countries.py
book_store/book_store/: settings.py
feedback/: db.sqlite3
feedback/feedback/: settings.py  urls.py
feedback/profiles/: forms.py  models.py  views.py
feedback/profiles/migrations/: 0001_initial.py
feedback/reviews/: forms.py  models.py  urls.py  views.py
feedback/reviews/migrations/: 0001_initial.py
monthly_challenges/: pytest.ini
monthly_challenges/challenges/: urls.py  views.py
monthly_challenges/challenges/tests/: test_integration_challenges_month.py  test_urls.py
monthly_challenges/monthly_challenges/: settings.py
monthly_challenges/static/: styles.css
monthly_challenges/templates/: 404.html  base.html
my_site/: db.sqlite3  pytest.ini
my_site/blog/: admin.py  forms.py  models.py  urls.py  views.py
my_site/blog/migrations/: 0001_initial.py  0002_alter_post_image.py  0003_alter_post_image.py  0004_comment.py
my_site/blog/tests/: __init__.py  (+3 more)
my_site/my_site/: settings.py  urls.py
my_site/static/: app.css
my_site/templates/: 404.html  base.html
mypage/mypage/: settings.py
(+23 files in other folders)
