[project]
name = "udemy-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "black==24.10.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "django==5.1.2",
    "greenlet==3.1.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "mypy-extensions==1.0.0",
    "packaging==24.1",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "playwright==1.48.0",
    "pluggy==1.5.0",
    "pyee==12.0.0",
    "pytest-base-url==2.1.0",
    "pytest-django==4.9.0",
    "pytest-playwright==0.5.2",
    "pytest==8.3.3",
    "python-slugify==8.0.4",
    "requests==2.32.3",
    "ruff==0.7.3",
    "sqlparse==0.5.1",
    "text-unidecode==1.3",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
]
